# anywall

./: README.md  package.json
client/: README.md  package-lock.json  package.json  types.ts  vite.config.ts
client/src/: App.tsx  main.tsx  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: main.rs
client/src/components/: breadcrumb.tsx  card-home.tsx  database-dashboard.tsx  end-of-content.tsx  error-page.tsx  filter-component.tsx  home.tsx  loading.tsx  not-found.tsx  sidebar-content.tsx  top-bar.tsx  wallpaper-detail.tsx
client/src/components/layout/: AppLayout.tsx
client/src/components/skeletons/: home-skeleton.tsx  wallpaper-skeleton.tsx
client/src/constants/: url.ts
client/src/lib/: getFileExtension.ts  string.ts  urlAndUint8Array.ts
server/: index.js  index.ts  package.json  tsconfig.json  types.ts
server/constant/: expressRateLimitOption.ts  port.js  port.ts  swaggerOption.js  swaggerOption.ts  url.js  url.ts
server/controllers/: services.js  services.ts
server/lib/: fetch.js  fetch.ts  string.js  string.ts
server/routes/: route.js  route.ts
server/test/: get.spec.ts  get.test.js
