[package]
name = "anywall"
version = "1.3.6"
description = "AnyWall: Change Wallpaper on any Desktop"
authors = ["rizkyfauziilmi"]
license = "MIT"
repository = "https://github.com/RizkyFauziIlmi/anywall"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
    "window-all",
    "path-all",
    "os-all",
    "app-all",
    "shell-all",
    "notification-all",
    "dialog-all",
    "fs-all",
    "http-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["winuser"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
